--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:release": "./node_modules/.bin/rollup module/src/init.js --file module/fitd-roller.js",
     "build:test": "./node_modules/.bin/rollup module/src/fitd-roller.js --file fitd-roller.js --format cjs",
     "clean": "rm module/fitd-roller.js fitd-roller.js build.tgz",
-    "package": "tar --exclude='./src' -czvf build.tgz -C module .",
+    "package": "cd module && zip -r ../build.zip . -x src\\* && cd ..",
     "release": "npm test && npm run build:release && npm run package",
     "test": "npm run build:test && ava"
   },
