--- a/.github/workflows/release-module.yml
+++ b/.github/workflows/release-module.yml
@@ -1,7 +1,7 @@
 name: Release Module
 on: [push]
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
