--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -1,7 +1,7 @@
 name: On Push
 on: [push]
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -13,16 +13,23 @@ jobs:
         run: npm install --include=dev
       - name: Run Tests
         run: npm test
+  release:
+    runs-on: ubuntu-latest
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install Dependencies
+        run: npm install --include=dev
       - name: Build
-        id: build
-        if: startsWith(github.ref, 'refs/tags/')
         run: npm run build:release
       - name: Package
-        id: package
-        if: steps.build.outcome != 'skipped'
         run: npm run package
       - name: Release
-        if: steps.package.outcome != 'skipped'
         uses: softprops/action-gh-release@v1
         with:
           files: build.zip
