--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Provides a generic Dice Roller for Forged in the Dark games",
   "main": "module/src/init.js",
   "scripts": {
-    "build:release": "./node_modules/.bin/rollup module/src/init.js --file module/fitd-roller.js",
+    "build:release": "./node_modules/.bin/rollup module/src/init.js --file module/fitd-roller.js --format iife",
     "build:test": "./node_modules/.bin/rollup module/src/fitd-roller.js --file fitd-roller.js --format cjs",
     "clean": "rm module/fitd-roller.js fitd-roller.js build.zip",
     "package": "cd module && zip -r ../build.zip . -x src\\* && cd ..",
